; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/net/tsclient/rdesktop/extr_licence.c_licence_present.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/net/tsclient/rdesktop/extr_licence.c_licence_present.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SEC_LICENCE_NEG = common dso_local global i32 0, align 4
@SEC_RANDOM_SIZE = common dso_local global i32 0, align 4
@SEC_MODULUS_SIZE = common dso_local global i32 0, align 4
@SEC_PADDING_SIZE = common dso_local global i32 0, align 4
@LICENCE_HWID_SIZE = common dso_local global i32 0, align 4
@LICENCE_SIGNATURE_SIZE = common dso_local global i32 0, align 4
@False = common dso_local global i32 0, align 4
@LICENCE_TAG_PRESENT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i32*, i32*, i32, i32*, i32*)* @licence_present to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @licence_present(i32* %0, i32* %1, i32* %2, i32* %3, i32 %4, i32* %5, i32* %6) #0 {
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32*, align 8
  %15 = alloca i32*, align 8
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  %18 = alloca i32*, align 8
  store i32* %0, i32** %9, align 8
  store i32* %1, i32** %10, align 8
  store i32* %2, i32** %11, align 8
  store i32* %3, i32** %12, align 8
  store i32 %4, i32* %13, align 4
  store i32* %5, i32** %14, align 8
  store i32* %6, i32** %15, align 8
  %19 = load i32, i32* @SEC_LICENCE_NEG, align 4
  store i32 %19, i32* %16, align 4
  %20 = load i32, i32* @SEC_RANDOM_SIZE, align 4
  %21 = add nsw i32 16, %20
  %22 = load i32, i32* @SEC_MODULUS_SIZE, align 4
  %23 = add nsw i32 %21, %22
  %24 = load i32, i32* @SEC_PADDING_SIZE, align 4
  %25 = add nsw i32 %23, %24
  %26 = load i32, i32* %13, align 4
  %27 = add nsw i32 %25, %26
  %28 = load i32, i32* @LICENCE_HWID_SIZE, align 4
  %29 = add nsw i32 %27, %28
  %30 = load i32, i32* @LICENCE_SIGNATURE_SIZE, align 4
  %31 = add nsw i32 %29, %30
  store i32 %31, i32* %17, align 4
  %32 = load i32*, i32** %9, align 8
  %33 = load i32, i32* %16, align 4
  %34 = load i32, i32* %17, align 4
  %35 = add nsw i32 %34, 4
  %36 = call i32* @sec_init(i32* %32, i32 %33, i32 %35)
  store i32* %36, i32** %18, align 8
  %37 = load i32*, i32** %18, align 8
  %38 = icmp eq i32* %37, null
  br i1 %38, label %39, label %41

39:                                               ; preds = %7
  %40 = load i32, i32* @False, align 4
  store i32 %40, i32* %8, align 4
  br label %102

41:                                               ; preds = %7
  %42 = load i32*, i32** %18, align 8
  %43 = load i32, i32* @LICENCE_TAG_PRESENT, align 4
  %44 = call i32 @out_uint8(i32* %42, i32 %43)
  %45 = load i32*, i32** %18, align 8
  %46 = call i32 @out_uint8(i32* %45, i32 2)
  %47 = load i32*, i32** %18, align 8
  %48 = load i32, i32* %17, align 4
  %49 = call i32 @out_uint16_le(i32* %47, i32 %48)
  %50 = load i32*, i32** %18, align 8
  %51 = call i32 @out_uint32_le(i32* %50, i32 1)
  %52 = load i32*, i32** %18, align 8
  %53 = call i32 @out_uint16(i32* %52, i32 0)
  %54 = load i32*, i32** %18, align 8
  %55 = call i32 @out_uint16_le(i32* %54, i32 513)
  %56 = load i32*, i32** %18, align 8
  %57 = load i32*, i32** %10, align 8
  %58 = load i32, i32* @SEC_RANDOM_SIZE, align 4
  %59 = call i32 @out_uint8p(i32* %56, i32* %57, i32 %58)
  %60 = load i32*, i32** %18, align 8
  %61 = call i32 @out_uint16(i32* %60, i32 0)
  %62 = load i32*, i32** %18, align 8
  %63 = load i32, i32* @SEC_MODULUS_SIZE, align 4
  %64 = load i32, i32* @SEC_PADDING_SIZE, align 4
  %65 = add nsw i32 %63, %64
  %66 = call i32 @out_uint16_le(i32* %62, i32 %65)
  %67 = load i32*, i32** %18, align 8
  %68 = load i32*, i32** %11, align 8
  %69 = load i32, i32* @SEC_MODULUS_SIZE, align 4
  %70 = call i32 @out_uint8p(i32* %67, i32* %68, i32 %69)
  %71 = load i32*, i32** %18, align 8
  %72 = load i32, i32* @SEC_PADDING_SIZE, align 4
  %73 = call i32 @out_uint8s(i32* %71, i32 %72)
  %74 = load i32*, i32** %18, align 8
  %75 = call i32 @out_uint16_le(i32* %74, i32 1)
  %76 = load i32*, i32** %18, align 8
  %77 = load i32, i32* %13, align 4
  %78 = call i32 @out_uint16_le(i32* %76, i32 %77)
  %79 = load i32*, i32** %18, align 8
  %80 = load i32*, i32** %12, align 8
  %81 = load i32, i32* %13, align 4
  %82 = call i32 @out_uint8p(i32* %79, i32* %80, i32 %81)
  %83 = load i32*, i32** %18, align 8
  %84 = call i32 @out_uint16_le(i32* %83, i32 1)
  %85 = load i32*, i32** %18, align 8
  %86 = load i32, i32* @LICENCE_HWID_SIZE, align 4
  %87 = call i32 @out_uint16_le(i32* %85, i32 %86)
  %88 = load i32*, i32** %18, align 8
  %89 = load i32*, i32** %14, align 8
  %90 = load i32, i32* @LICENCE_HWID_SIZE, align 4
  %91 = call i32 @out_uint8p(i32* %88, i32* %89, i32 %90)
  %92 = load i32*, i32** %18, align 8
  %93 = load i32*, i32** %15, align 8
  %94 = load i32, i32* @LICENCE_SIGNATURE_SIZE, align 4
  %95 = call i32 @out_uint8p(i32* %92, i32* %93, i32 %94)
  %96 = load i32*, i32** %18, align 8
  %97 = call i32 @s_mark_end(i32* %96)
  %98 = load i32*, i32** %9, align 8
  %99 = load i32*, i32** %18, align 8
  %100 = load i32, i32* %16, align 4
  %101 = call i32 @sec_send(i32* %98, i32* %99, i32 %100)
  store i32 %101, i32* %8, align 4
  br label %102

102:                                              ; preds = %41, %39
  %103 = load i32, i32* %8, align 4
  ret i32 %103
}

declare dso_local i32* @sec_init(i32*, i32, i32) #1

declare dso_local i32 @out_uint8(i32*, i32) #1

declare dso_local i32 @out_uint16_le(i32*, i32) #1

declare dso_local i32 @out_uint32_le(i32*, i32) #1

declare dso_local i32 @out_uint16(i32*, i32) #1

declare dso_local i32 @out_uint8p(i32*, i32*, i32) #1

declare dso_local i32 @out_uint8s(i32*, i32) #1

declare dso_local i32 @s_mark_end(i32*) #1

declare dso_local i32 @sec_send(i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
